--- a/安装问题.md
+++ b/安装问题.md
@@ -4,5 +4,5 @@
 
 
 
-![](http://ww1.sinaimg.cn/large/006XqkXegy1frrbmlg76sj30ih09wwf5.jpg)
-#####安装成功之后提示这是你想要的新标签页，请选择保留更改，否则兔子将无法使用。
+![](http://ww1.sinaimg.cn/large/006XqkXegy1frrbmlg76sj30ih09wwf5.jpg)<br/>
+安装成功之后提示这是你想要的新标签页，请选择保留更改，否则兔子将无法使用。
