--- a/常见问题.md
+++ b/常见问题.md
@@ -4,11 +4,11 @@
 
 
 ![](http://ww1.sinaimg.cn/large/006XqkXegy1frrc23hmb5j305k05kdfq.jpg)
-#####  [1.新手必看！ Tooless 基本用户守则，相关法规](https://github.com/toolessorg/chinanet/blob/master/pay%20attention.md "新手必看！ Tooless 基本用户守则，相关法规")<br/><br/>
-#####  [2.安装成功提醒扩展程序更改标签页，请选择保留更改！](https://github.com/toolessorg/chinanet/blob/master/%E5%AE%89%E8%A3%85%E9%97%AE%E9%A2%98.md "安装成功提醒扩展程序更改标签页，请选择保留更改！")<br/><br/>
-#####  [3.如何减少Google 人机验证？](https://github.com/toolessorg/chinanet/blob/master/%E5%A6%82%E4%BD%95%E5%87%8F%E5%B0%91Google%20%E4%BA%BA%E6%9C%BA%E9%AA%8C%E8%AF%81.md "如何减少Google 人机验证？")<br/><br/>
-#####  [4.如何解决Chrome浏览器 "喔唷 崩溃啦" (Aw Snap)问题？](https://github.com/toolessorg/chinanet/blob/master/Chrome%E6%B5%8F%E8%A7%88%E5%99%A8%E5%B4%A9%E6%BA%83%E9%97%AE.md "如何解决Chrome浏览器 "喔唷 崩溃啦" (Aw Snap)问题？")<br/><br/>
-##### [5.亲测有效！如何注册Google 账号？（可解决手机验证码问题）](https://github.com/toolessorg/chinanet/blob/master/google%E8%B4%A6%E5%8F%B7%E6%B3%A8%E5%86%8C.md "亲测有效！如何注册Google 账号？（可解决手机验证码问题）")<br/><br/>
-##### [6.关于实名认证](https://github.com/toolessorg/chinanet/blob/master/%E5%AE%9E%E5%90%8D%E8%AE%A4%E8%AF%81.md "6.关于实名认证")<br/><br/>
-##### [7.如何恢复 Youtube 的正常使用?](https://github.com/toolessorg/chinanet/blob/master/%E6%81%A2%E5%A4%8DYoutube.md "7.如何恢复 Youtube 的正常使用?")<br/><br/>
+[1.新手必看！ Tooless 基本用户守则，相关法规](https://github.com/toolessorg/chinanet/blob/master/pay%20attention.md "新手必看！ Tooless 基本用户守则，相关法规")<br/>
+ [2.安装成功提醒扩展程序更改标签页，请选择保留更改！](https://github.com/toolessorg/chinanet/blob/master/%E5%AE%89%E8%A3%85%E9%97%AE%E9%A2%98.md "安装成功提醒扩展程序更改标签页，请选择保留更改！")<br/>
+ [3.如何减少Google 人机验证？](https://github.com/toolessorg/chinanet/blob/master/%E5%A6%82%E4%BD%95%E5%87%8F%E5%B0%91Google%20%E4%BA%BA%E6%9C%BA%E9%AA%8C%E8%AF%81.md "如何减少Google 人机验证？")<br/>
+ [4.如何解决Chrome浏览器 "喔唷 崩溃啦" (Aw Snap)问题？](https://github.com/toolessorg/chinanet/blob/master/Chrome%E6%B5%8F%E8%A7%88%E5%99%A8%E5%B4%A9%E6%BA%83%E9%97%AE.md "如何解决Chrome浏览器 "喔唷 崩溃啦" (Aw Snap)问题？")<br/>
+[5.亲测有效！如何注册Google 账号？（可解决手机验证码问题）](https://github.com/toolessorg/chinanet/blob/master/google%E8%B4%A6%E5%8F%B7%E6%B3%A8%E5%86%8C.md "亲测有效！如何注册Google 账号？（可解决手机验证码问题）")<br/>
+ [6.关于实名认证](https://github.com/toolessorg/chinanet/blob/master/%E5%AE%9E%E5%90%8D%E8%AE%A4%E8%AF%81.md "6.关于实名认证")<br/>
+ [7.如何恢复 Youtube 的正常使用?](https://github.com/toolessorg/chinanet/blob/master/%E6%81%A2%E5%A4%8DYoutube.md "7.如何恢复 Youtube 的正常使用?")<br/>
 
