--- a/常见问题.md
+++ b/常见问题.md
@@ -4,8 +4,7 @@
 
 
   ![](http://ww1.sinaimg.cn/large/006XqkXegy1frrc23hmb5j305k05kdfq.jpg)<br/>   
-[1.新手必看！ Tooless 基本用户守则，相关法规]
-(https://github.com/toolessorg/chinanet/blob/master/pay%20attention.md "新手必看！ Tooless 基本用户守则，相关法规")<br/>
+[1.新手必看！ Tooless 基本用户守则，相关法规](https://github.com/toolessorg/chinanet/blob/master/pay%20attention.md "新手必看！ Tooless 基本用户守则，相关法规")<br/>
  [2.安装成功提醒扩展程序更改标签页，请选择保留更改！](https://github.com/toolessorg/chinanet/blob/master/%E5%AE%89%E8%A3%85%E9%97%AE%E9%A2%98.md "安装成功提醒扩展程序更改标签页，请选择保留更改！")<br/>
  [3.如何减少Google 人机验证？](https://github.com/toolessorg/chinanet/blob/master/%E5%A6%82%E4%BD%95%E5%87%8F%E5%B0%91Google%20%E4%BA%BA%E6%9C%BA%E9%AA%8C%E8%AF%81.md "如何减少Google 人机验证？")<br/>
  [4.如何解决Chrome浏览器 "喔唷 崩溃啦" (Aw Snap)问题？](https://github.com/toolessorg/chinanet/blob/master/Chrome%E6%B5%8F%E8%A7%88%E5%99%A8%E5%B4%A9%E6%BA%83%E9%97%AE.md)<br/>
