--- a/常见问题.md
+++ b/常见问题.md
@@ -11,4 +11,4 @@
 [5.亲测有效！如何注册Google 账号？（可解决手机验证码问题）](https://github.com/toolessorg/chinanet/blob/master/google%E8%B4%A6%E5%8F%B7%E6%B3%A8%E5%86%8C.md "亲测有效！如何注册Google 账号？（可解决手机验证码问题）")<br/>
  [6.关于实名认证](https://github.com/toolessorg/chinanet/blob/master/%E5%AE%9E%E5%90%8D%E8%AE%A4%E8%AF%81.md "6.关于实名认证")<br/>
  [7.如何恢复 Youtube 的正常使用?](https://github.com/toolessorg/chinanet/blob/master/%E6%81%A2%E5%A4%8DYoutube.md "7.如何恢复 Youtube 的正常使用?")<br/>
-
+[8.关于流量问题](https://github.com/toolessorg/chinanet/blob/master/%E6%B5%81%E9%87%8F%E9%97%AE%E9%A2%98.md)<br/>
